--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,145 @@
 /*  your css code here. If applicable */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    overflow-x: hidden;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    /* width: 100%; */
+    height: 60px;
+
+    padding: 4px 12px;
+
+    background-color: #313131;
+    color: #e3e3e3;
+
+    position: relative;
+}
+
+.navbar-links-list {
+    display: none;
+}
+.hide {
+    display: none;
+}
+
+.menu-toggle-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+    justify-content: center;
+
+    row-gap: 2px;
+
+    height: 25px;
+    aspect-ratio: 1;
+
+    border: none;
+    background-color: transparent;
+    outline: none;
+
+    cursor: pointer;
+}
+.menu-bar {
+    width: 100%;
+    height: 0;
+
+    border: 2px solid #4d69bd;
+    background-color: #4d69bd;
+    border-radius: 3px;
+
+    transform-origin: 16%;
+    transition: all 0.2s linear;
+    
+    
+}
+.close-menu {
+
+    >.mid {
+        opacity: 0;
+        transform: translateX(10px)
+    }
+    >.top {
+        transform: rotate(45deg);
+    }
+    >.bottom {
+        transform: rotate(-45deg);
+    }
+}
+.open-menu {    
+    >.mid {        
+        transform: translateX(0);        
+    }
+    >.top {
+        transform: rotate(0);               
+    }
+    >.bottom {
+        transform: rotate(0);        
+    }
+}
+
+.links-drawer-container {
+    position: absolute;
+    left: 100%;
+    top: 100%;
+    padding: 24px;
+    border-radius: 0 0 0 10px;
+
+    width: 200px;
+
+    background-color: #412141;
+    color: white;
+
+    transition: all 0.2s linear;
+    
+    >ul {
+        list-style-type: none;
+        list-style-position: inside;
+
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        row-gap: 12px;
+
+        width: 100%;
+
+        >li {
+            >a {
+                color: white;
+                text-decoration: none;
+            }
+        }
+    }
+}
+.slide-in {
+    transform: translateX(-100%);
+}
+
+
+@media screen and (min-width: 567px) {
+    .navbar-links-list {
+        
+        display: flex;
+        align-items: center;
+        column-gap: 14px;
+
+        list-style-type: none;
+
+        >li >a {
+            color: white;
+            text-decoration: none;
+        }
+    }
+    .menu-toggle-button {
+        display: none !important;
+    }
+
+}
